feat: Optimize bmad-release-management by removing common knowledge data files
- Deleted 'data/versioning-strategies.md', 'data/changelog-conventions.md', and 'data/deployment-patterns.md' as their content is common knowledge for AI models, saving token consumption.
- Updated all referencing agents, tasks, and templates to remove explicit references to these deleted files, relying on the AI's inherent knowledge for these standard concepts.
- Ensured remaining data files (guides) provide specific, procedural context relevant to the pack's unique workflows.

--- a/expansion-packs/bmad-release-management/templates/deployment-plan.yaml
+++ b/expansion-packs/bmad-release-management/templates/deployment-plan.yaml
@@ -28,7 +28,7 @@ sections:
         title: Deployment Strategy
         type: choice
         choices: [Blue-Green, Canary, Rolling, Feature-Flags, Recreate]
-        instruction: Select deployment pattern from deployment-patterns.md
+        instruction: Select the most appropriate deployment pattern (e.g., Blue-Green, Canary) based on the release's risk profile.
         elicit: true
 
       - id: pre-deployment-tasks
@@ -78,7 +78,7 @@ sections:
 metadata:
   references:
     knowledge-base:
-      - deployment-patterns.md
+      - deployment-planning-guide.md
     checklists:
       - deployment-checklist.md
       - rollback-checklist.md
